a1/brendan_gordon/TEST_PROGRAMS/invalidtype/prabhjot_sandhu/floatWhileExp.min
var x:int;
var y:int;
var z:float;

read x;
read y;
z = x + y;

while z do
z = z - 1;
print z;
done

